# retire

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
coalapi/: __init__.py  data.py
docs/: config_example.yaml  configuration.md  data_sources.md  index.md  usage_guide.md  visualization_methods.md
docs/development/: data.md  explorer.md  testing.md
docs/source/: conf.py  data.rst  data_sources.md  explore.rst  retire.rst  usage_guide.md  visualization_methods.md
docs/source/_build/doctrees/: configuration.doctree  data.doctree  data_sources.doctree  explore.doctree  index.doctree  retire.doctree  usage_guide.doctree  visualization_methods.doctree
docs/source/_build/doctrees/development/: data.doctree  explorer.doctree  (+1 more)
docs/source/_build/html/: .buildinfo  configuration.html  data.html  data_sources.html  explore.html  genindex.html  index.html  objects.inv  py-modindex.html  retire.html  search.html  searchindex.js  usage_guide.html  visualization_methods.html
docs/source/development/: data.md  explorer.md  testing.md
examples/: paper_figures.ipynb
manuscript/: SI.ipynb  methods.ipynb
retire/: __init__.py  data.py  retire.py
retire/data/: __init__.py  data.py
retire/examples/: __init__.py  dotplot_config.py  heatmap_config.py
retire/explore/: __init__.py  explore.py
retire/figures/: __init__.py  coal_figure.py  paper_figure.py  plotkit.py
retire/resources/results/: plant_archetype_matches.csv
scripts/: config.py  script_utils.py  sync_results.py
tutorials/: using_retire.ipynb  using_thema.ipynb
(+14 files in other folders)
