[project]
name = "retire"
version = "0.1.0"
description = "A data driven approach to strategizing the retirement of US Coal Plants."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.3.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=1.24.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
    "seaborn>=0.13.2",
    "plotly>=6.2.0",
]

[tool.setuptools.package-data]
coalapi = ["resources/*.csv"]

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]

[tool.setuptools]
include-package-data = true
